Commit bilingual files

--- a/docs/csharp/language-reference/compiler-messages/cs0246.md
+++ b/docs/csharp/language-reference/compiler-messages/cs0246.md
@@ -1,39 +1,43 @@
 ---
 title: "コンパイラ エラー CS0246"
-ms.date: 07/20/2015
+ms.date: 01/23/2018
 ms.prod: .net
-ms.technology: devlang-csharp
+ms.technology:
+- devlang-csharp
 ms.topic: error-reference
-f1_keywords: CS0246
-helpviewer_keywords: CS0246
+f1_keywords:
+- CS0246
+helpviewer_keywords:
+- CS0246
 ms.assetid: 4948fae2-2cc0-4ce4-b98c-ea69a8120b71
-caps.latest.revision: "17"
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: bae9491b4f3bd9ee6242297f804ef19ce8eaf953
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 2417789608488fcf9812987c8f065488faf21935
+ms.sourcegitcommit: c1904b0437605a90e5aa65b4abd7e048000e349d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 01/24/2018
 ---
-# <a name="compiler-error-cs0246"></a><span data-ttu-id="0524b-102">コンパイラ エラー CS0246</span><span class="sxs-lookup"><span data-stu-id="0524b-102">Compiler Error CS0246</span></span>
-<span data-ttu-id="0524b-103">型または名前空間の名前 'type/namespace' が見つかりませんでした (using ディレクティブまたはアセンブリ参照が指定されていることを確認してください)</span><span class="sxs-lookup"><span data-stu-id="0524b-103">The type or namespace name 'type/namespace' could not be found (are you missing a using directive or an assembly reference?)</span></span>  
+# <a name="compiler-error-cs0246"></a><span data-ttu-id="98989-102">コンパイラ エラー CS0246</span><span class="sxs-lookup"><span data-stu-id="98989-102">Compiler Error CS0246</span></span>
+<span data-ttu-id="98989-103">型または名前空間の名前 'type/namespace' が見つかりませんでした (using ディレクティブまたはアセンブリ参照が指定されていることを確認してください)</span><span class="sxs-lookup"><span data-stu-id="98989-103">The type or namespace name 'type/namespace' could not be found (are you missing a using directive or an assembly reference?)</span></span>  
   
- <span data-ttu-id="0524b-104">プログラムで使用されている型または名前空間が見つかりませんでした。</span><span class="sxs-lookup"><span data-stu-id="0524b-104">A type or namespace that is used in the program was not found.</span></span> <span data-ttu-id="0524b-105">型が含まれているアセンブリを参照 ([/reference](../../../csharp/language-reference/compiler-options/reference-compiler-option.md)) していないか、または必要な [using ディレクティブ](../../../csharp/language-reference/keywords/using-directive.md)を追加しなかった可能性があります。</span><span class="sxs-lookup"><span data-stu-id="0524b-105">You might have forgotten to reference ([/reference](../../../csharp/language-reference/compiler-options/reference-compiler-option.md)) the assembly that contains the type, or you might not have added the required [using directive](../../../csharp/language-reference/keywords/using-directive.md).</span></span>  <span data-ttu-id="0524b-106">あるいは、参照しようしているアセンブリに問題がある可能性があります。</span><span class="sxs-lookup"><span data-stu-id="0524b-106">Or, there might be an issue with the assembly you are trying to reference.</span></span>  
+ <span data-ttu-id="98989-104">プログラムで使用されている型または名前空間が見つかりませんでした。</span><span class="sxs-lookup"><span data-stu-id="98989-104">A type or namespace that is used in the program was not found.</span></span> <span data-ttu-id="98989-105">型が含まれているアセンブリを参照 ([-reference](../../../csharp/language-reference/compiler-options/reference-compiler-option.md)) していないか、または必要な [using ディレクティブ](../../../csharp/language-reference/keywords/using-directive.md)を追加しなかった可能性があります。</span><span class="sxs-lookup"><span data-stu-id="98989-105">You might have forgotten to reference ([-reference](../../../csharp/language-reference/compiler-options/reference-compiler-option.md)) the assembly that contains the type, or you might not have added the required [using directive](../../../csharp/language-reference/keywords/using-directive.md).</span></span>  <span data-ttu-id="98989-106">あるいは、参照しようしているアセンブリに問題がある可能性があります。</span><span class="sxs-lookup"><span data-stu-id="98989-106">Or, there might be an issue with the assembly you are trying to reference.</span></span>  
   
- <span data-ttu-id="0524b-107">次のような状況のときに、コンパイラ エラー CS0246 が発生します。</span><span class="sxs-lookup"><span data-stu-id="0524b-107">The following situations cause compiler error CS0246.</span></span>  
+ <span data-ttu-id="98989-107">次のような状況のときに、コンパイラ エラー CS0246 が発生します。</span><span class="sxs-lookup"><span data-stu-id="98989-107">The following situations cause compiler error CS0246.</span></span>  
   
--   <span data-ttu-id="0524b-108">型名または名前空間名のスペルを間違えませんでしたか。</span><span class="sxs-lookup"><span data-stu-id="0524b-108">Did you misspell the name of the type or namespace?</span></span> <span data-ttu-id="0524b-109">正しい名前でない場合、コンパイラは型または名前空間の定義を見つけることができません。</span><span class="sxs-lookup"><span data-stu-id="0524b-109">Without the correct name, the compiler cannot find the definition for the type or namespace.</span></span> <span data-ttu-id="0524b-110">このことは、多くの場合、型の名前に使用している大文字と小文字が正しくないために発生します。</span><span class="sxs-lookup"><span data-stu-id="0524b-110">This often occurs because the casing used in the name of the type is not correct.</span></span> <span data-ttu-id="0524b-111">たとえば、 `Dataset ds;` では、Dataset の s を大文字にする必要があるため、CS0246 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="0524b-111">For example, `Dataset ds;` generates CS0246 because the s in Dataset must be capitalized.</span></span>  
+-   <span data-ttu-id="98989-108">型名または名前空間名のスペルを間違えませんでしたか。</span><span class="sxs-lookup"><span data-stu-id="98989-108">Did you misspell the name of the type or namespace?</span></span> <span data-ttu-id="98989-109">正しい名前でない場合、コンパイラは型または名前空間の定義を見つけることができません。</span><span class="sxs-lookup"><span data-stu-id="98989-109">Without the correct name, the compiler cannot find the definition for the type or namespace.</span></span> <span data-ttu-id="98989-110">このことは、多くの場合、型の名前に使用している大文字と小文字が正しくないために発生します。</span><span class="sxs-lookup"><span data-stu-id="98989-110">This often occurs because the casing used in the name of the type is not correct.</span></span> <span data-ttu-id="98989-111">たとえば、 `Dataset ds;` では、Dataset の s を大文字にする必要があるため、CS0246 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="98989-111">For example, `Dataset ds;` generates CS0246 because the s in Dataset must be capitalized.</span></span>  
   
--   <span data-ttu-id="0524b-112">エラーが名前空間名に関するものである場合、その名前空間が含まれているアセンブリに参照 ([/reference](../../../csharp/language-reference/compiler-options/reference-compiler-option.md)) を追加しましたか。</span><span class="sxs-lookup"><span data-stu-id="0524b-112">If the error is for a namespace name, did you add a reference ([/reference](../../../csharp/language-reference/compiler-options/reference-compiler-option.md)) to the assembly that contains the namespace?</span></span> <span data-ttu-id="0524b-113">たとえば、コードにディレクティブ `using Accessibility`が含まれている可能性があります。</span><span class="sxs-lookup"><span data-stu-id="0524b-113">For example, your code might contain the directive `using Accessibility`.</span></span> <span data-ttu-id="0524b-114">ただし、プロジェクトで Accessibility.dll アセンブリを参照していない場合は、エラー CS0246 が報告されます。</span><span class="sxs-lookup"><span data-stu-id="0524b-114">However, if your project does not reference the assembly Accessibility.dll, error CS0246 is reported.</span></span> <span data-ttu-id="0524b-115">詳細については、「[プロジェクト内の参照の管理](/visualstudio/ide/managing-references-in-a-project)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="0524b-115">For more information, see [Managing references in a project](/visualstudio/ide/managing-references-in-a-project)</span></span>  
+-   <span data-ttu-id="98989-112">エラーが名前空間名に関するものである場合、その名前空間が含まれているアセンブリに参照 ([-reference](../../../csharp/language-reference/compiler-options/reference-compiler-option.md)) を追加しましたか。</span><span class="sxs-lookup"><span data-stu-id="98989-112">If the error is for a namespace name, did you add a reference ([-reference](../../../csharp/language-reference/compiler-options/reference-compiler-option.md)) to the assembly that contains the namespace?</span></span> <span data-ttu-id="98989-113">たとえば、コードにディレクティブ `using Accessibility`が含まれている可能性があります。</span><span class="sxs-lookup"><span data-stu-id="98989-113">For example, your code might contain the directive `using Accessibility`.</span></span> <span data-ttu-id="98989-114">ただし、プロジェクトで Accessibility.dll アセンブリを参照していない場合は、エラー CS0246 が報告されます。</span><span class="sxs-lookup"><span data-stu-id="98989-114">However, if your project does not reference the assembly Accessibility.dll, error CS0246 is reported.</span></span> <span data-ttu-id="98989-115">詳細については、「[プロジェクト内の参照の管理](/visualstudio/ide/managing-references-in-a-project)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="98989-115">For more information, see [Managing references in a project](/visualstudio/ide/managing-references-in-a-project)</span></span>  
   
--   <span data-ttu-id="0524b-116">型名に関するエラーである場合は、適切な [using](../../../csharp/language-reference/keywords/using.md) ディレクティブを含めたか、あるいは別の方法として型の名前を完全に修飾しましたか。</span><span class="sxs-lookup"><span data-stu-id="0524b-116">If the error is for a type name, did you include the proper [using](../../../csharp/language-reference/keywords/using.md) directive, or, alternatively, fully qualify the name of the type?</span></span> <span data-ttu-id="0524b-117">次の宣言を検討してみます: `DataSet ds`。</span><span class="sxs-lookup"><span data-stu-id="0524b-117">Consider the following declaration: `DataSet ds`.</span></span> <span data-ttu-id="0524b-118">`DataSet` 型を使用するには、2 つのものが必要です。</span><span class="sxs-lookup"><span data-stu-id="0524b-118">To use the `DataSet` type, you need two things.</span></span> <span data-ttu-id="0524b-119">まず、 `DataSet` 型の定義が含まれているアセンブリへの参照が必要です。</span><span class="sxs-lookup"><span data-stu-id="0524b-119">First, you need a reference to the assembly that contains the definition for the `DataSet` type.</span></span> <span data-ttu-id="0524b-120">次に、 `using` が配置されている名前空間の `DataSet` ディレクティブが必要です。</span><span class="sxs-lookup"><span data-stu-id="0524b-120">Second, you need a `using` directive for the namespace where `DataSet` is located.</span></span> <span data-ttu-id="0524b-121">たとえば、 `DataSet` が **System.Data** 名前空間に配置されているため、コードの先頭に次のディレクティブが必要になります: `using System.Data`。</span><span class="sxs-lookup"><span data-stu-id="0524b-121">For example, because `DataSet` is located in the **System.Data** namespace, you need the following directive at the beginning of your code: `using System.Data`.</span></span>  
+-   <span data-ttu-id="98989-116">型名に関するエラーである場合は、適切な [using](../../../csharp/language-reference/keywords/using-directive.md) ディレクティブを含めたか、あるいは別の方法として型の名前を完全に修飾しましたか。</span><span class="sxs-lookup"><span data-stu-id="98989-116">If the error is for a type name, did you include the proper [using directive](../../../csharp/language-reference/keywords/using-directive.md), or, alternatively, fully qualify the name of the type?</span></span> <span data-ttu-id="98989-117">次の宣言を検討してみます: `DataSet ds`。</span><span class="sxs-lookup"><span data-stu-id="98989-117">Consider the following declaration: `DataSet ds`.</span></span> <span data-ttu-id="98989-118">`DataSet` 型を使用するには、2 つのものが必要です。</span><span class="sxs-lookup"><span data-stu-id="98989-118">To use the `DataSet` type, you need two things.</span></span> <span data-ttu-id="98989-119">まず、 `DataSet` 型の定義が含まれているアセンブリへの参照が必要です。</span><span class="sxs-lookup"><span data-stu-id="98989-119">First, you need a reference to the assembly that contains the definition for the `DataSet` type.</span></span> <span data-ttu-id="98989-120">次に、 `using` が配置されている名前空間の `DataSet` ディレクティブが必要です。</span><span class="sxs-lookup"><span data-stu-id="98989-120">Second, you need a `using` directive for the namespace where `DataSet` is located.</span></span> <span data-ttu-id="98989-121">たとえば、 `DataSet` が **System.Data** 名前空間に配置されているため、コードの先頭に次のディレクティブが必要になります: `using System.Data`。</span><span class="sxs-lookup"><span data-stu-id="98989-121">For example, because `DataSet` is located in the **System.Data** namespace, you need the following directive at the beginning of your code: `using System.Data`.</span></span>  
   
-     <span data-ttu-id="0524b-122">`using` ディレクティブは必須ではありません。</span><span class="sxs-lookup"><span data-stu-id="0524b-122">The `using` directive is not required.</span></span> <span data-ttu-id="0524b-123">ただし、このディレクティブを省略した場合は、 `DataSet` 型を参照するときにその型を完全修飾する必要があります。</span><span class="sxs-lookup"><span data-stu-id="0524b-123">However, if you omit the directive, you must fully qualify the `DataSet` type when referring to it.</span></span> <span data-ttu-id="0524b-124">完全修飾とは、コードで型を参照するたびに名前空間と型の両方を指定することを意味します。</span><span class="sxs-lookup"><span data-stu-id="0524b-124">Full qualification means that you specify both the namespace and the type each time you refer to the type in your code.</span></span> <span data-ttu-id="0524b-125">前の例で `using` ディレクティブを省略した場合は、 `System.Data.DataSet ds` ではなく `ds` を宣言する `DataSet ds`を記述する必要があります。</span><span class="sxs-lookup"><span data-stu-id="0524b-125">If you omit the `using` directive in the previous example, you must write `System.Data.DataSet ds` to declare `ds` instead of `DataSet ds`.</span></span>  
+     <span data-ttu-id="98989-122">`using` ディレクティブは必須ではありません。</span><span class="sxs-lookup"><span data-stu-id="98989-122">The `using` directive is not required.</span></span> <span data-ttu-id="98989-123">ただし、このディレクティブを省略した場合は、 `DataSet` 型を参照するときにその型を完全修飾する必要があります。</span><span class="sxs-lookup"><span data-stu-id="98989-123">However, if you omit the directive, you must fully qualify the `DataSet` type when referring to it.</span></span> <span data-ttu-id="98989-124">完全修飾とは、コードで型を参照するたびに名前空間と型の両方を指定することを意味します。</span><span class="sxs-lookup"><span data-stu-id="98989-124">Full qualification means that you specify both the namespace and the type each time you refer to the type in your code.</span></span> <span data-ttu-id="98989-125">前の例で `using` ディレクティブを省略した場合は、 `System.Data.DataSet ds` ではなく `ds` を宣言する `DataSet ds`を記述する必要があります。</span><span class="sxs-lookup"><span data-stu-id="98989-125">If you omit the `using` directive in the previous example, you must write `System.Data.DataSet ds` to declare `ds` instead of `DataSet ds`.</span></span>  
   
--   <span data-ttu-id="0524b-126">型が必要とされる変数またはその他の言語要素を使用しましたか。</span><span class="sxs-lookup"><span data-stu-id="0524b-126">Did you use a variable or some other language element where a type was expected?</span></span> <span data-ttu-id="0524b-127">たとえば、 **is** ステートメントでは、実際の型ではなく `Type` オブジェクトを使用すると、エラー CS0246 が発生します。</span><span class="sxs-lookup"><span data-stu-id="0524b-127">For example, in an **is** statement, if you use a `Type` object instead of an actual type, you get error CS0246.</span></span>  
+-   <span data-ttu-id="98989-126">型が必要とされる変数またはその他の言語要素を使用しましたか。</span><span class="sxs-lookup"><span data-stu-id="98989-126">Did you use a variable or some other language element where a type was expected?</span></span> <span data-ttu-id="98989-127">たとえば、 **is** ステートメントでは、実際の型ではなく `Type` オブジェクトを使用すると、エラー CS0246 が発生します。</span><span class="sxs-lookup"><span data-stu-id="98989-127">For example, in an **is** statement, if you use a `Type` object instead of an actual type, you get error CS0246.</span></span>  
+
+-   <span data-ttu-id="98989-128">プログラムのターゲット フレームワークより高いフレームワーク バージョンに対してビルドされたアセンブリを参照しましたか。</span><span class="sxs-lookup"><span data-stu-id="98989-128">Did you reference the assembly that was built against a higher framework version than the target framework of the program?</span></span> <span data-ttu-id="98989-129">または、プログラムのターゲット フレームワークより高いフレームワーク バージョンをターゲットとするプロジェクトを参照しましたか。</span><span class="sxs-lookup"><span data-stu-id="98989-129">Or did you reference the project that is targeting a higher framework version than the target framework of the program?</span></span> <span data-ttu-id="98989-130">たとえば、.NET Framework 4.6.1 をターゲットとするプロジェクトで作業していて、.NET Framework 4.7.1 をターゲットとするプロジェクトからの型を使用しているとします。</span><span class="sxs-lookup"><span data-stu-id="98989-130">For example, you work on the project that is targeting .NET Framework 4.6.1 and use the type from the project that is targeting .NET Framework 4.7.1.</span></span> <span data-ttu-id="98989-131">エラー CS0246 が発生します。</span><span class="sxs-lookup"><span data-stu-id="98989-131">Then you get error CS0246.</span></span>
   
--   <span data-ttu-id="0524b-128">型名を完全に修飾しないで *using エイリアス ディレクティブ* を使用しましたか。</span><span class="sxs-lookup"><span data-stu-id="0524b-128">Did you use a *using alias directive* without fully qualifying the type name?</span></span> <span data-ttu-id="0524b-129">`using` エイリアス ディレクティブは、型の解決にソース コード ファイルの `using` ディレクティブを使用しません。</span><span class="sxs-lookup"><span data-stu-id="0524b-129">A `using` alias directive does not use the `using` directives in the source code file to resolve types.</span></span> <span data-ttu-id="0524b-130">次の例では、型 `List<int>` が完全修飾されていないため、CS0246 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="0524b-130">The following example generates CS0246 because the type `List<int>` is not fully qualified.</span></span> <span data-ttu-id="0524b-131">`using` の `System.Collections.Generic` ディレクティブを使用しても、このエラーは回避できません。</span><span class="sxs-lookup"><span data-stu-id="0524b-131">The `using` directive for `System.Collections.Generic` does not prevent the error.</span></span>  
+-   <span data-ttu-id="98989-132">型名を完全に修飾しないで *using エイリアス ディレクティブ* を使用しましたか。</span><span class="sxs-lookup"><span data-stu-id="98989-132">Did you use a *using alias directive* without fully qualifying the type name?</span></span> <span data-ttu-id="98989-133">`using` エイリアス ディレクティブは、型の解決にソース コード ファイルの `using` ディレクティブを使用しません。</span><span class="sxs-lookup"><span data-stu-id="98989-133">A `using` alias directive does not use the `using` directives in the source code file to resolve types.</span></span> <span data-ttu-id="98989-134">次の例では、型 `List<int>` が完全修飾されていないため、CS0246 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="98989-134">The following example generates CS0246 because the type `List<int>` is not fully qualified.</span></span> <span data-ttu-id="98989-135">`using` の `System.Collections.Generic` ディレクティブを使用しても、このエラーは回避できません。</span><span class="sxs-lookup"><span data-stu-id="98989-135">The `using` directive for `System.Collections.Generic` does not prevent the error.</span></span>  
   
     ```csharp  
     using System.Collections.Generic;  
@@ -45,11 +49,11 @@ ms.lasthandoff: 10/18/2017
     using myAliasName2 = System.Collections.Generic.List<int>;  
     ```  
   
-     <span data-ttu-id="0524b-132">以前に動作していたコードでこのエラーが発生した場合は、まず、ソリューション エクスプローラーで不足または未解決の参照を探します。</span><span class="sxs-lookup"><span data-stu-id="0524b-132">If you get this error in code that was previously working, first look for missing or unresolved references in Solution Explorer.</span></span> <span data-ttu-id="0524b-133">[NuGet](https://www.nuget.org/)パッケージを再インストールする必要がありますか。</span><span class="sxs-lookup"><span data-stu-id="0524b-133">Do you need to re-install a [NuGet](https://www.nuget.org/)package?</span></span> <span data-ttu-id="0524b-134">ビルド システムでの参照の検索方法については、「 [Resolving file references in team build](http://blogs.msdn.com/b/manishagarwal/archive/2005/09/28/474769.aspx)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="0524b-134">For information about how the build system searches for references, see [Resolving file references in team build](http://blogs.msdn.com/b/manishagarwal/archive/2005/09/28/474769.aspx).</span></span> <span data-ttu-id="0524b-135">すべての参照が正しいと思われる場合は、ソース管理履歴を調べて、.csproj ファイルやローカルのソース ファイルの変更点を確認します。</span><span class="sxs-lookup"><span data-stu-id="0524b-135">If all references seem to be correct, look in your source control history to see what has changed in your .csproj file and/or your local source file.</span></span>  
+     <span data-ttu-id="98989-136">以前に動作していたコードでこのエラーが発生した場合は、まず、ソリューション エクスプローラーで不足または未解決の参照を探します。</span><span class="sxs-lookup"><span data-stu-id="98989-136">If you get this error in code that was previously working, first look for missing or unresolved references in Solution Explorer.</span></span> <span data-ttu-id="98989-137">[NuGet](https://www.nuget.org/) パッケージを再インストールする必要がありますか。</span><span class="sxs-lookup"><span data-stu-id="98989-137">Do you need to re-install a [NuGet](https://www.nuget.org/) package?</span></span> <span data-ttu-id="98989-138">ビルド システムでの参照の検索方法については、「 [Resolving file references in team build](http://blogs.msdn.com/b/manishagarwal/archive/2005/09/28/474769.aspx)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="98989-138">For information about how the build system searches for references, see [Resolving file references in team build](http://blogs.msdn.com/b/manishagarwal/archive/2005/09/28/474769.aspx).</span></span> <span data-ttu-id="98989-139">すべての参照が正しいと思われる場合は、ソース管理履歴を調べて、.csproj ファイルやローカルのソース ファイルの変更点を確認します。</span><span class="sxs-lookup"><span data-stu-id="98989-139">If all references seem to be correct, look in your source control history to see what has changed in your .csproj file and/or your local source file.</span></span>  
   
-     <span data-ttu-id="0524b-136">参照にまだ正常にアクセスしていない場合は、オブジェクト ブラウザーを使用して、この名前空間が含まれることになるアセンブリを調べ、実際に名前空間が存在することを確認します。</span><span class="sxs-lookup"><span data-stu-id="0524b-136">If you haven’t successfully accessed the reference yet, use the Object Browser to inspect the assembly that is supposed to contain this namespace and verify that the namespace is present.</span></span> <span data-ttu-id="0524b-137">オブジェクト ブラウザーでアセンブリに名前空間が含まれていることを確認した場合は、名前空間の "using" ディレクティブを削除し、他に何か互換性に影響するものがないか確認してみてください。</span><span class="sxs-lookup"><span data-stu-id="0524b-137">If you verify with Object Browser that the assembly contains the namespace, try removing the "using" directive for the namespace and see what else breaks.</span></span> <span data-ttu-id="0524b-138">別のアセンブリ内の他の型に根本的な問題がある可能性もあります。</span><span class="sxs-lookup"><span data-stu-id="0524b-138">The root problem may be with some other type in another assembly.</span></span>  
+     <span data-ttu-id="98989-140">参照にまだ正常にアクセスしていない場合は、オブジェクト ブラウザーを使用して、この名前空間が含まれることになるアセンブリを調べ、実際に名前空間が存在することを確認します。</span><span class="sxs-lookup"><span data-stu-id="98989-140">If you haven’t successfully accessed the reference yet, use the Object Browser to inspect the assembly that is supposed to contain this namespace and verify that the namespace is present.</span></span> <span data-ttu-id="98989-141">オブジェクト ブラウザーでアセンブリに名前空間が含まれていることを確認した場合は、名前空間の `using` ディレクティブを削除し、他に何か互換性に影響するものがないか確認してみてください。</span><span class="sxs-lookup"><span data-stu-id="98989-141">If you verify with Object Browser that the assembly contains the namespace, try removing the `using` directive for the namespace and see what else breaks.</span></span> <span data-ttu-id="98989-142">別のアセンブリ内の他の型に根本的な問題がある可能性もあります。</span><span class="sxs-lookup"><span data-stu-id="98989-142">The root problem may be with some other type in another assembly.</span></span>  
   
- <span data-ttu-id="0524b-139">次の例では、必要な `using` ディレクティブがないため、CS0246 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="0524b-139">The following example generates CS0246 because a necessary `using` directive is missing.</span></span>  
+ <span data-ttu-id="98989-143">次の例では、必要な `using` ディレクティブがないため、CS0246 が生成されます。</span><span class="sxs-lookup"><span data-stu-id="98989-143">The following example generates CS0246 because a necessary `using` directive is missing.</span></span>  
   
 ```csharp  
 // CS0246.cs  
@@ -71,7 +75,7 @@ public class MyClass
 }  
 ```  
   
- <span data-ttu-id="0524b-140">次の例では、実際の型を必要とする場所で型 `Type` のオブジェクトが使用されため、CS0246 が発生します。</span><span class="sxs-lookup"><span data-stu-id="0524b-140">The following example causes CS0246 because an object of type `Type` was used where an actual type was expected.</span></span>  
+ <span data-ttu-id="98989-144">次の例では、実際の型を必要とする場所で型 `Type` のオブジェクトが使用されため、CS0246 が発生します。</span><span class="sxs-lookup"><span data-stu-id="98989-144">The following example causes CS0246 because an object of type `Type` was used where an actual type was expected.</span></span>  
   
 ```csharp  
 // CS0246b.cs  
