Commit translated content

--- a/docs/visual-basic/misc/bc30241.md
+++ b/docs/visual-basic/misc/bc30241.md
@@ -1,31 +1,41 @@
 ---
 title: "名前付き引数が必要です。"
-ms.date: 07/20/2015
+ms.date: 02/01/2018
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - bc30241
 - vbc30241
-helpviewer_keywords: BC30241
+helpviewer_keywords:
+- BC30241
 ms.assetid: d21fe832-814c-4a33-aa31-a1e425924881
-caps.latest.revision: "8"
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: b80d3f7f2c3b8ee0ff5e37648b808a1b28c29704
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+author: rpetrusha
+ms.author: ronpet
+ms.openlocfilehash: 395ebc62802c54a33ae662efddbf5e443ad9b70d
+ms.sourcegitcommit: 099aa20d9b6450d1b7452d782a55771a6ad8ff35
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 02/05/2018
 ---
 # <a name="named-argument-expected"></a>名前付き引数が必要です。
-プロシージャ呼び出しで引数リストは、名前別に引数を渡してから、位置別に引数を渡します。 すべての位置指定引数は、プロシージャ呼び出しで名前によって渡される引数の前に指定する必要があります。  
+
+メソッドの呼び出しで引数リストは、名前と、位置による引数で引数を渡します。 既定では、すべての位置指定引数メソッド呼び出しで名前によって渡される引数の前にする必要があります。  
   
  **エラー ID:** BC30241  
   
 ## <a name="to-correct-this-error"></a>このエラーを解決するには  
   
--   引数リストを書き換えて、名前によって渡される引数の前に位置によって渡される引数を配置します。  
+-   15.5 より前の任意のバージョンの Visual Basic でコンパイルする場合は、名前によって渡された引数の前に位置によって渡される引数を配置する引数リストを書き直してください。  
+
+- Visual Basic 15.5 のコンパイル中またはそれ以降の場合は、次のコードを追加`<PropertyGroup>`要素を\*.vbproj プロジェクト ファイル。
+ 
+   ```xml
+   <PropertyGroup>
+    <LangVersion>15.5</LangVersion>
+   </PropertyGroup>
+   ```  
   
-## <a name="see-also"></a>関連項目  
+## <a name="see-also"></a>参照  
  [位置と名前による引数渡し](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
