--- a/docs/visual-basic/misc/bc30241.md
+++ b/docs/visual-basic/misc/bc30241.md
@@ -1,31 +1,41 @@
 ---
 title: "名前付き引数が必要です。"
-ms.date: 07/20/2015
+ms.date: 02/01/2018
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - bc30241
 - vbc30241
-helpviewer_keywords: BC30241
+helpviewer_keywords:
+- BC30241
 ms.assetid: d21fe832-814c-4a33-aa31-a1e425924881
-caps.latest.revision: "8"
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: b80d3f7f2c3b8ee0ff5e37648b808a1b28c29704
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+author: rpetrusha
+ms.author: ronpet
+ms.openlocfilehash: 395ebc62802c54a33ae662efddbf5e443ad9b70d
+ms.sourcegitcommit: 099aa20d9b6450d1b7452d782a55771a6ad8ff35
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 02/05/2018
 ---
-# <a name="named-argument-expected"></a><span data-ttu-id="4326d-102">名前付き引数が必要です。</span><span class="sxs-lookup"><span data-stu-id="4326d-102">Named argument expected</span></span>
-<span data-ttu-id="4326d-103">プロシージャ呼び出しで引数リストは、名前別に引数を渡してから、位置別に引数を渡します。</span><span class="sxs-lookup"><span data-stu-id="4326d-103">An argument list in a procedure call passes an argument by name and then an argument by position.</span></span> <span data-ttu-id="4326d-104">すべての位置指定引数は、プロシージャ呼び出しで名前によって渡される引数の前に指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="4326d-104">All positional arguments must precede any argument passed by name in a procedure call.</span></span>  
+# <a name="named-argument-expected"></a><span data-ttu-id="cc101-102">名前付き引数が必要です。</span><span class="sxs-lookup"><span data-stu-id="cc101-102">Named argument expected</span></span>
+
+<span data-ttu-id="cc101-103">メソッドの呼び出しで引数リストは、名前と、位置による引数で引数を渡します。</span><span class="sxs-lookup"><span data-stu-id="cc101-103">An argument list in a method call passes an argument by name and then an argument by position.</span></span> <span data-ttu-id="cc101-104">既定では、すべての位置指定引数メソッド呼び出しで名前によって渡される引数の前にする必要があります。</span><span class="sxs-lookup"><span data-stu-id="cc101-104">By default, all positional arguments must precede any argument passed by name in a method call.</span></span>  
   
- <span data-ttu-id="4326d-105">**エラー ID:** BC30241</span><span class="sxs-lookup"><span data-stu-id="4326d-105">**Error ID:** BC30241</span></span>  
+ <span data-ttu-id="cc101-105">**エラー ID:** BC30241</span><span class="sxs-lookup"><span data-stu-id="cc101-105">**Error ID:** BC30241</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="4326d-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="4326d-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="cc101-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="cc101-106">To correct this error</span></span>  
   
--   <span data-ttu-id="4326d-107">引数リストを書き換えて、名前によって渡される引数の前に位置によって渡される引数を配置します。</span><span class="sxs-lookup"><span data-stu-id="4326d-107">Rewrite the argument list to place arguments passed by position ahead of arguments passed by name.</span></span>  
+-   <span data-ttu-id="cc101-107">15.5 より前の任意のバージョンの Visual Basic でコンパイルする場合は、名前によって渡された引数の前に位置によって渡される引数を配置する引数リストを書き直してください。</span><span class="sxs-lookup"><span data-stu-id="cc101-107">If you are compiling with any version of Visual Basic earlier than 15.5, rewrite the argument list to place arguments passed by position ahead of arguments passed by name.</span></span>  
+
+- <span data-ttu-id="cc101-108">Visual Basic 15.5 のコンパイル中またはそれ以降の場合は、次のコードを追加`<PropertyGroup>`要素を\*.vbproj プロジェクト ファイル。</span><span class="sxs-lookup"><span data-stu-id="cc101-108">If you are compiling with Visual Basic 15.5 or later, add the following `<PropertyGroup>` element to your \*.vbproj project file:</span></span>
+ 
+   ```xml
+   <PropertyGroup>
+    <LangVersion>15.5</LangVersion>
+   </PropertyGroup>
+   ```  
   
-## <a name="see-also"></a><span data-ttu-id="4326d-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="4326d-108">See Also</span></span>  
- [<span data-ttu-id="4326d-109">位置と名前による引数渡し</span><span class="sxs-lookup"><span data-stu-id="4326d-109">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
+## <a name="see-also"></a><span data-ttu-id="cc101-109">参照</span><span class="sxs-lookup"><span data-stu-id="cc101-109">See Also</span></span>  
+ [<span data-ttu-id="cc101-110">位置と名前による引数渡し</span><span class="sxs-lookup"><span data-stu-id="cc101-110">Passing Arguments by Position and by Name</span></span>](../../visual-basic/programming-guide/language-features/procedures/passing-arguments-by-position-and-by-name.md)
