Commit translated content

--- a/docs/visual-basic/misc/bc32052.md
+++ b/docs/visual-basic/misc/bc32052.md
@@ -2,14 +2,16 @@
 title: "&#39; が &#39;です。オペランド型 &#39; の&lt;typeparametername&gt;&#39; のみを比較することができます (& a) #39 です。何も &#39;&#39;です。&lt;typeparametername&gt;&#39; は、型パラメーターでは、クラス制約のないです。"
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - vbc32052
 - bc32052
-helpviewer_keywords: BC32052
+helpviewer_keywords:
+- BC32052
 ms.assetid: 0bbf2249-eb0d-4b74-a555-8868c7ebe91d
-caps.latest.revision: "12"
+caps.latest.revision: 
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: 83dc327f4ff839368e427400c1000e2c4aeb6b44
