--- a/docs/visual-basic/misc/bc30666.md
+++ b/docs/visual-basic/misc/bc30666.md
@@ -2,14 +2,16 @@
 title: "&#39;です。Throw &#39;ステートメントは外側のオペランドを省略できません、&#39;です。Catch &#39;ステートメントまたは内部、&#39;です。最後に &#39;です。ステートメント"
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - vbc30666
 - bc30666
-helpviewer_keywords: BC30666
+helpviewer_keywords:
+- BC30666
 ms.assetid: a208a6ea-0e36-4bf1-8984-4de1a0e38a2a
-caps.latest.revision: "8"
+caps.latest.revision: 
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: 5fa3be0ca47a4158b3abeef9801148e3f19d3b36
