--- a/docs/visual-basic/misc/bc30765.md
+++ b/docs/visual-basic/misc/bc30765.md
@@ -2,14 +2,16 @@
 title: "Visual Basic ソリューションのすべてのプロジェクトは、同じプラットフォームを対象にしなければなりませんが、追加しようとしているプロジェクトは、ソリューションで指定したプラットフォームとは異なるプラットフォームを対象にしています"
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - bc30765
 - vbc30765
-helpviewer_keywords: BC30765
+helpviewer_keywords:
+- BC30765
 ms.assetid: aef2b63a-7013-4f6d-b3bf-227df7e79b02
-caps.latest.revision: "8"
+caps.latest.revision: 
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: b165533483079697b065d84975c89316bc16b63a
