--- a/docs/visual-basic/misc/bc30817.md
+++ b/docs/visual-basic/misc/bc30817.md
@@ -2,14 +2,16 @@
 title: "&#39; GoTo &#39;および &#39; GoSub &#39;ステートメントがサポートされていません"
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - bc30817
 - vbc30817
-helpviewer_keywords: BC30817
+helpviewer_keywords:
+- BC30817
 ms.assetid: 89087bfa-7d74-4f18-9a12-2c5852076ea0
-caps.latest.revision: "8"
+caps.latest.revision: 
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: c3a5d69453f48432fc9715e8c0160e92c5ba5e6a
