--- a/docs/visual-basic/misc/bc31007.md
+++ b/docs/visual-basic/misc/bc31007.md
@@ -2,14 +2,16 @@
 title: "モジュール ファイル &#39; を開けません。&lt;filename&gt;&#39;:&lt;エラー&gt;"
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - vbc31007
 - bc31007
-helpviewer_keywords: BC31007
+helpviewer_keywords:
+- BC31007
 ms.assetid: eba76bf8-93e9-4709-87e0-0cb9ade868a5
-caps.latest.revision: "7"
+caps.latest.revision: 
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: fa95a18af089dd122fb94e09ac9427c641b2c9e0
