--- a/docs/visual-basic/misc/bc32048.md
+++ b/docs/visual-basic/misc/bc32048.md
@@ -2,14 +2,16 @@
 title: "型の制約 &#39;&lt;式&gt;&#39; クラスまたはインターフェイスではありません"
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - bc32048
 - vbc32048
-helpviewer_keywords: BC32048
+helpviewer_keywords:
+- BC32048
 ms.assetid: 68811886-44ac-43e1-9315-b39857310033
-caps.latest.revision: "10"
+caps.latest.revision: 
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: a61b69e624fabd76199043fc5cdcc71bbcc054da
