--- a/docs/visual-basic/misc/bc32119.md
+++ b/docs/visual-basic/misc/bc32119.md
@@ -2,14 +2,16 @@
 title: "制約 &#39;&lt;constraint1&gt;&#39; 制約 &#39; と競合しています&lt;constraint2&gt;&#39; 型のパラメーター &#39; に既に指定されている&lt;typeparametername&gt;&#39;です。"
 ms.date: 07/20/2015
 ms.prod: .net
-ms.technology: devlang-visual-basic
+ms.technology:
+- devlang-visual-basic
 ms.topic: article
 f1_keywords:
 - vbc32119
 - bc32119
-helpviewer_keywords: BC32119
+helpviewer_keywords:
+- BC32119
 ms.assetid: 30e6778d-5c2b-4f2d-a136-4e66fa9fbe4d
-caps.latest.revision: "8"
+caps.latest.revision: 
 author: dotnet-bot
 ms.author: dotnetcontent
 ms.openlocfilehash: e4d055f78e38d2f8e14c188dfe254ebd4afa6c07
