Commit bilingual files

--- a/docs/framework/migration-guide/runtime/4.6.1-4.7.md
+++ b/docs/framework/migration-guide/runtime/4.6.1-4.7.md
@@ -1,50 +1,47 @@
 ---
 title: ".NET Framework 4.6.1 から 4.7 への移行に関するランタイム変更"
-ms.date: 06/16/2017
+ms.date: 02/26/2018
 ms.prod: .net-framework
 ms.technology:
 - dotnet-clr
 - app-compat
 ms.topic: article
-caps.latest.revision: "1"
+caps.latest.revision: 
 ms.assetid: 8e41905c-f11c-46ca-ac9a-958479b98747
-author: conniey
+author: chlowell
 ms.author: ronpet
 manager: wpickett
-ms.workload: dotnet
-ms.openlocfilehash: 1bf390cfd11f922749fb4bd5e9c1174c4833e24f
-ms.sourcegitcommit: 16186c34a957fdd52e5db7294f291f7530ac9d24
+ms.workload:
+- dotnet
+ms.openlocfilehash: 253666c43a023c9698e69d7f178e4b7c7764ac69
+ms.sourcegitcommit: 655fd4f78741967f80c409cef98347fdcf77857d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/22/2017
+ms.lasthandoff: 02/28/2018
 ---
-# <a name="runtime-changes-for-migration-from-net-framework-461-to-47"></a><span data-ttu-id="d5b1d-102">.NET Framework 4.6.1 から 4.7 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="d5b1d-102">Runtime Changes for Migration from .NET Framework 4.6.1 to 4.7</span></span>
+# <a name="runtime-changes-for-migration-from-net-framework-461-to-47"></a><span data-ttu-id="6dcb5-102">.NET Framework 4.6.1 から 4.7 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="6dcb5-102">Runtime Changes for Migration from .NET Framework 4.6.1 to 4.7</span></span>
 
 [!include[versionselector](../../../../includes/migration-guide/runtime/versionselector.md)]
 
 [!include[introduction](../../../../includes/migration-guide/runtime/introduction.md)]
 
-<span data-ttu-id="d5b1d-103">.NET Framework 4.6.1 から 4.7 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="d5b1d-103">If you are migrating from the .NET Framework 4.6.1 to 4.7, review the following topics for application compatibility issues that may affect your app:</span></span>
+<span data-ttu-id="6dcb5-103">.NET Framework 4.6.1 から 4.7 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="6dcb5-103">If you are migrating from the .NET Framework 4.6.1 to 4.7, review the following topics for application compatibility issues that may affect your app:</span></span>
 
-## <a name="core"></a><span data-ttu-id="d5b1d-104">コア</span><span class="sxs-lookup"><span data-stu-id="d5b1d-104">Core</span></span>
-
-[!include[ETW event names cannot differ only by a "Start" or "Stop" suffix](~/includes/migration-guide/runtime/core/etw-event-names-cannot-differ-only-by-start-stop-suffix.md)]
-
-## <a name="data"></a><span data-ttu-id="d5b1d-105">データ</span><span class="sxs-lookup"><span data-stu-id="d5b1d-105">Data</span></span>
+## <a name="data"></a><span data-ttu-id="6dcb5-104">データ</span><span class="sxs-lookup"><span data-stu-id="6dcb5-104">Data</span></span>
 
 [!include[Attempting a TCP/IP connection to a SQL Server database that resolves to `localhost` fails](~/includes/migration-guide/runtime/data/attempting-tcpip-connection-sql-server-database-that-resolves-localhost.md)]
 
 [!include[Connection pool blocking period for Azure SQL databases is removed](~/includes/migration-guide/runtime/data/connection-pool-blocking-period-for-azure-sql-databases-removed.md)]
 
-## <a name="globalization"></a><span data-ttu-id="d5b1d-106">グローバリゼーション</span><span class="sxs-lookup"><span data-stu-id="d5b1d-106">Globalization</span></span>
+## <a name="globalization"></a><span data-ttu-id="6dcb5-105">グローバリゼーション</span><span class="sxs-lookup"><span data-stu-id="6dcb5-105">Globalization</span></span>
 
 [!include[Unicode standard version 8.0 categories now supported](~/includes/migration-guide/runtime/globalization/unicode-standard-version-80-categories-now-supported.md)]
 
-## <a name="jit"></a><span data-ttu-id="d5b1d-107">JIT</span><span class="sxs-lookup"><span data-stu-id="d5b1d-107">JIT</span></span>
+## <a name="jit"></a><span data-ttu-id="6dcb5-106">JIT</span><span class="sxs-lookup"><span data-stu-id="6dcb5-106">JIT</span></span>
 
 [!include[Incorrect code generation when passing and comparing UInt16 values](~/includes/migration-guide/runtime/jit/incorrect-code-generation-when-passing-comparing-uint16-values.md)]
 
-## <a name="security"></a><span data-ttu-id="d5b1d-108">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="d5b1d-108">Security</span></span>
+## <a name="security"></a><span data-ttu-id="6dcb5-107">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="6dcb5-107">Security</span></span>
 
 [!include[RSACng and DSACng are once again usable in Partial Trust scenarios](~/includes/migration-guide/runtime/security/rsacng-dsacng-are-once-again-usable-partial-trust-scenarios.md)]
 
@@ -52,11 +49,11 @@ ms.lasthandoff: 12/22/2017
 
 [!include[SignedXml and EncryptedXml Breaking Changes](~/includes/migration-guide/runtime/security/signedxml-encryptedxml-breaking-changes.md)]
 
-## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="d5b1d-109">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="d5b1d-109">Windows Communication Foundation (WCF)</span></span>
+## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="6dcb5-108">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="6dcb5-108">Windows Communication Foundation (WCF)</span></span>
 
 [!include[Remove Ssl3 from the WCF TransportDefaults](~/includes/migration-guide/runtime/wcf/remove-ssl3-from-wcf-transportdefaults.md)]
 
-## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="d5b1d-110">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="d5b1d-110">Windows Presentation Foundation (WPF)</span></span>
+## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="6dcb5-109">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="6dcb5-109">Windows Presentation Foundation (WPF)</span></span>
 
 [!include[Changing the IsEnabled property of the parent of a TextBlock control affects any child controls](~/includes/migration-guide/runtime/wpf/changing-isenabled-property-parent-textblock-control-affects-any-child.md)]
 
@@ -78,7 +75,7 @@ ms.lasthandoff: 12/22/2017
 
 [!include[WPF Spell Checking fails in unexpected ways](~/includes/migration-guide/runtime/wpf/wpf-spell-checking-fails-unexpected-ways.md)]
 
-## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="d5b1d-111">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="d5b1d-111">Windows Workflow Foundation (WF)</span></span>
+## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="6dcb5-110">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="6dcb5-110">Windows Workflow Foundation (WF)</span></span>
 
 [!include[Workflow now throws original exception instead of NullReferenceException in some cases](~/includes/migration-guide/runtime/wf/workflow-now-throws-original-exception-instead-nullreferenceexception-some.md)]
 
