--- a/docs/framework/migration-guide/retargeting/4.6-4.7.1.md
+++ b/docs/framework/migration-guide/retargeting/4.6-4.7.1.md
@@ -1,38 +1,39 @@
 ---
-title: ".NET Framework 4.6 から 4.7.1 への移行に関する変更の再ターゲット | Microsoft Docs"
-ms.date: 10/09/2017
+title: ".NET Framework 4.6 から 4.7.1 への移行に関する変更の再ターゲット"
+ms.date: 02/26/2018
 ms.prod: .net-framework
 ms.technology:
 - dotnet-clr
 - app-compat
 ms.topic: article
-caps.latest.revision: "1"
+caps.latest.revision: 
 ms.assetid: 4f64e84a-eee3-4613-a2b9-317724a0f82e
-author: conniey
+author: chlowell
 ms.author: ronpet
 manager: wpickett
-ms.workload: dotnet
-ms.openlocfilehash: 7ddc964bedb38044d9719ff9742b554891997a72
-ms.sourcegitcommit: 16186c34a957fdd52e5db7294f291f7530ac9d24
+ms.workload:
+- dotnet
+ms.openlocfilehash: f33da5c88224dd0d5f4d873718d10488d809ccaa
+ms.sourcegitcommit: 655fd4f78741967f80c409cef98347fdcf77857d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/22/2017
+ms.lasthandoff: 02/28/2018
 ---
-# <a name="retargeting-changes-for-migration-from-net-framework-46-to-471"></a><span data-ttu-id="48a27-102">.NET Framework 4.6 から 4.7.1 への移行に関する変更の再ターゲット</span><span class="sxs-lookup"><span data-stu-id="48a27-102">Retargeting Changes for Migration from .NET Framework 4.6 to 4.7.1</span></span>
+# <a name="retargeting-changes-for-migration-from-net-framework-46-to-471"></a><span data-ttu-id="c02b2-102">.NET Framework 4.6 から 4.7.1 への移行に関する変更の再ターゲット</span><span class="sxs-lookup"><span data-stu-id="c02b2-102">Retargeting Changes for Migration from .NET Framework 4.6 to 4.7.1</span></span>
 
 [!include[versionselector](../../../../includes/migration-guide/retargeting/versionselector.md)]
 
 [!include[introduction](../../../../includes/migration-guide/retargeting/introduction.md)]
 
-<span data-ttu-id="48a27-103">.NET Framework 4.6 から 4.7.1 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="48a27-103">If you are migrating from the .NET Framework 4.6 to 4.7.1, review the following topics for application compatibility issues that may affect your app:</span></span>
+<span data-ttu-id="c02b2-103">.NET Framework 4.6 から 4.7.1 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="c02b2-103">If you are migrating from the .NET Framework 4.6 to 4.7.1, review the following topics for application compatibility issues that may affect your app:</span></span>
 
-## <a name="aspnet"></a><span data-ttu-id="48a27-104">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="48a27-104">ASP.NET</span></span>
+## <a name="aspnet"></a><span data-ttu-id="c02b2-104">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="c02b2-104">ASP.NET</span></span>
 
 [!include[ASP.NET Accessibility Improvements in .NET 4.7.1](~/includes/migration-guide/retargeting/asp/aspnet-accessibility-improvements-net-471.md)]
 
 [!include[Throttle concurrent requests per session](~/includes/migration-guide/retargeting/asp/throttle-concurrent-requests-per-session.md)]
 
-## <a name="core"></a><span data-ttu-id="48a27-105">コア</span><span class="sxs-lookup"><span data-stu-id="48a27-105">Core</span></span>
+## <a name="core"></a><span data-ttu-id="c02b2-105">コア</span><span class="sxs-lookup"><span data-stu-id="c02b2-105">Core</span></span>
 
 [!include[AesCryptoServiceProvider decryptor provides a reusable transform](~/includes/migration-guide/retargeting/core/aescryptoserviceprovider-decryptor-provides-reusable-transform.md)]
 
@@ -44,6 +45,8 @@ ms.lasthandoff: 12/22/2017
 
 [!include[CurrentCulture and CurrentUICulture flow across tasks](~/includes/migration-guide/retargeting/core/currentculture-currentuiculture-flow-across-tasks.md)]
 
+[!include[ETW event names cannot differ only by a "Start" or "Stop" suffix](~/includes/migration-guide/retargeting/core/etw-event-names-cannot-differ-only-by-start-stop-suffix.md)]
+
 [!include[Long path support](~/includes/migration-guide/retargeting/core/long-path-support.md)]
 
 [!include[Path colon checks are stricter](~/includes/migration-guide/retargeting/core/path-colon-checks-are-stricter.md)]
@@ -52,13 +55,13 @@ ms.lasthandoff: 12/22/2017
 
 [!include[ServiceBase doesn't propagate OnStart exceptions](~/includes/migration-guide/retargeting/core/servicebase-doesnt-propagate-onstart-exceptions.md)]
 
-## <a name="networking"></a><span data-ttu-id="48a27-106">ネットワーキング</span><span class="sxs-lookup"><span data-stu-id="48a27-106">Networking</span></span>
+## <a name="networking"></a><span data-ttu-id="c02b2-106">ネットワーキング</span><span class="sxs-lookup"><span data-stu-id="c02b2-106">Networking</span></span>
 
 [!include[Default value of ServicePointManager.SecurityProtocol is SecurityProtocolType.System.Default](~/includes/migration-guide/retargeting/networking/default-value-servicepointmanagersecurityprotocol.md)]
 
 [!include[SslStream supports TLS Alerts](~/includes/migration-guide/retargeting/networking/sslstream-supports-tls-alerts.md)]
 
-## <a name="security"></a><span data-ttu-id="48a27-107">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="48a27-107">Security</span></span>
+## <a name="security"></a><span data-ttu-id="c02b2-107">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="c02b2-107">Security</span></span>
 
 [!include[CspParameters.ParentWindowHandle now expects HWND value](~/includes/migration-guide/retargeting/security/cspparametersparentwindowhandle-now-expects-hwnd-value.md)]
 
@@ -66,11 +69,9 @@ ms.lasthandoff: 12/22/2017
 
 [!include[RSACng now correctly loads RSA keys of non-standard key size](~/includes/migration-guide/retargeting/security/rsacng-now-correctly-loads-rsa-keys-non-standard-key-size.md)]
 
-## <a name="wpf"></a><span data-ttu-id="48a27-108">WPF</span><span class="sxs-lookup"><span data-stu-id="48a27-108">WPF</span></span>
+[!include[SslStream supports TLS Alerts](~/includes/migration-guide/retargeting/networking/sslstream-supports-tls-alerts.md)]
 
-[!include[Accessibility improvements in WPF](~/includes/migration-guide/retargeting/wpf/accessibility-improvements-wpf.md)]
-
-## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="48a27-109">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="48a27-109">Windows Communication Foundation (WCF)</span></span>
+## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="c02b2-108">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="c02b2-108">Windows Communication Foundation (WCF)</span></span>
 
 [!include[Deadlock may result when using Reentrant services](~/includes/migration-guide/retargeting/wcf/deadlock-may-result-when-using-reentrant-services.md)]
 
@@ -88,7 +89,7 @@ ms.lasthandoff: 12/22/2017
 
 [!include[X509CertificateClaimSet.FindClaims Considers All claimTypes](~/includes/migration-guide/retargeting/wcf/x509certificateclaimsetfindclaims-considers-all-claimtypes.md)]
 
-## <a name="windows-forms"></a><span data-ttu-id="48a27-110">Windows フォーム</span><span class="sxs-lookup"><span data-stu-id="48a27-110">Windows Forms</span></span>
+## <a name="windows-forms"></a><span data-ttu-id="c02b2-109">Windows フォーム</span><span class="sxs-lookup"><span data-stu-id="c02b2-109">Windows Forms</span></span>
 
 [!include[Accessibility improvements in Windows Forms controls](~/includes/migration-guide/retargeting/winforms/accessibility-improvements-windows-forms-controls.md)]
 
@@ -96,7 +97,9 @@ ms.lasthandoff: 12/22/2017
 
 [!include[Incorrect implementation of MemberDescriptor.Equals](~/includes/migration-guide/retargeting/winforms/incorrect-implementation-memberdescriptorequals.md)]
 
-## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="48a27-111">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="48a27-111">Windows Presentation Foundation (WPF)</span></span>
+## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="c02b2-110">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="c02b2-110">Windows Presentation Foundation (WPF)</span></span>
+
+[!include[Accessibility improvements in WPF](~/includes/migration-guide/retargeting/wpf/accessibility-improvements-wpf.md)]
 
 [!include[CurrentCulture is not preserved across WPF Dispatcher operations](~/includes/migration-guide/retargeting/wpf/currentculture-not-preserved-across-wpf-dispatcher-operations.md)]
 
@@ -112,7 +115,7 @@ ms.lasthandoff: 12/22/2017
 
 [!include[WPF Pointer-Based Touch Stack](~/includes/migration-guide/retargeting/wpf/wpf-pointer-based-touch-stack.md)]
 
-## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="48a27-112">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="48a27-112">Windows Workflow Foundation (WF)</span></span>
+## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="c02b2-111">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="c02b2-111">Windows Workflow Foundation (WF)</span></span>
 
 [!include[Accessibility improvements in Windows Workflow Foundation (WF) workflow designer](~/includes/migration-guide/retargeting/wf/accessibility-improvements-windows-workflow-foundation-wf-designer.md)]
 
