--- a/docs/framework/migration-guide/retargeting/4.6.1-4.7.md
+++ b/docs/framework/migration-guide/retargeting/4.6.1-4.7.md
@@ -1,36 +1,37 @@
 ---
 title: ".NET Framework 4.6.1 から 4.7 への移行に関する変更の再ターゲット"
-ms.date: 06/16/2017
+ms.date: 02/26/2018
 ms.prod: .net-framework
 ms.technology:
 - dotnet-clr
 - app-compat
 ms.topic: article
-caps.latest.revision: "1"
+caps.latest.revision: 
 ms.assetid: 1faa3083-e79b-4c3b-9db0-2d732ffded96
-author: conniey
+author: chlowell
 ms.author: ronpet
 manager: wpickett
-ms.workload: dotnet
-ms.openlocfilehash: d6d790c746fa6e700d873aa4cf492eada660c859
-ms.sourcegitcommit: 16186c34a957fdd52e5db7294f291f7530ac9d24
+ms.workload:
+- dotnet
+ms.openlocfilehash: 7572b83d00f264084a87da3540992a3c1e42a32f
+ms.sourcegitcommit: 655fd4f78741967f80c409cef98347fdcf77857d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/22/2017
+ms.lasthandoff: 02/28/2018
 ---
-# <a name="retargeting-changes-for-migration-from-net-framework-461-to-47"></a><span data-ttu-id="e745f-102">.NET Framework 4.6.1 から 4.7 への移行に関する変更の再ターゲット</span><span class="sxs-lookup"><span data-stu-id="e745f-102">Retargeting Changes for Migration from .NET Framework 4.6.1 to 4.7</span></span>
+# <a name="retargeting-changes-for-migration-from-net-framework-461-to-47"></a><span data-ttu-id="2cd33-102">.NET Framework 4.6.1 から 4.7 への移行に関する変更の再ターゲット</span><span class="sxs-lookup"><span data-stu-id="2cd33-102">Retargeting Changes for Migration from .NET Framework 4.6.1 to 4.7</span></span>
 
 [!include[versionselector](../../../../includes/migration-guide/retargeting/versionselector.md)]
 
 [!include[introduction](../../../../includes/migration-guide/retargeting/introduction.md)]
 
-<span data-ttu-id="e745f-103">.NET Framework 4.6.1 から 4.7 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="e745f-103">If you are migrating from the .NET Framework 4.6.1 to 4.7, review the following topics for application compatibility issues that may affect your app:</span></span>
+<span data-ttu-id="2cd33-103">.NET Framework 4.6.1 から 4.7 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="2cd33-103">If you are migrating from the .NET Framework 4.6.1 to 4.7, review the following topics for application compatibility issues that may affect your app:</span></span>
 
-## <a name="aspnet"></a><span data-ttu-id="e745f-104">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="e745f-104">ASP.NET</span></span>
+## <a name="aspnet"></a><span data-ttu-id="2cd33-104">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="2cd33-104">ASP.NET</span></span>
 
 [!include[Throttle concurrent requests per session](~/includes/migration-guide/retargeting/asp/throttle-concurrent-requests-per-session.md)]
 
-## <a name="core"></a><span data-ttu-id="e745f-105">コア</span><span class="sxs-lookup"><span data-stu-id="e745f-105">Core</span></span>
+## <a name="core"></a><span data-ttu-id="2cd33-105">コア</span><span class="sxs-lookup"><span data-stu-id="2cd33-105">Core</span></span>
 
 [!include[AesCryptoServiceProvider decryptor provides a reusable transform](~/includes/migration-guide/retargeting/core/aescryptoserviceprovider-decryptor-provides-reusable-transform.md)]
 
@@ -40,17 +41,19 @@ ms.lasthandoff: 12/22/2017
 
 [!include[CurrentCulture and CurrentUICulture flow across tasks](~/includes/migration-guide/retargeting/core/currentculture-currentuiculture-flow-across-tasks.md)]
 
+[!include[ETW event names cannot differ only by a "Start" or "Stop" suffix](~/includes/migration-guide/retargeting/core/etw-event-names-cannot-differ-only-by-start-stop-suffix.md)]
+
 [!include[Long path support](~/includes/migration-guide/retargeting/core/long-path-support.md)]
 
 [!include[Path colon checks are stricter](~/includes/migration-guide/retargeting/core/path-colon-checks-are-stricter.md)]
 
-## <a name="networking"></a><span data-ttu-id="e745f-106">ネットワーキング</span><span class="sxs-lookup"><span data-stu-id="e745f-106">Networking</span></span>
+## <a name="networking"></a><span data-ttu-id="2cd33-106">ネットワーキング</span><span class="sxs-lookup"><span data-stu-id="2cd33-106">Networking</span></span>
 
 [!include[Default value of ServicePointManager.SecurityProtocol is SecurityProtocolType.System.Default](~/includes/migration-guide/retargeting/networking/default-value-servicepointmanagersecurityprotocol.md)]
 
 [!include[SslStream supports TLS Alerts](~/includes/migration-guide/retargeting/networking/sslstream-supports-tls-alerts.md)]
 
-## <a name="security"></a><span data-ttu-id="e745f-107">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="e745f-107">Security</span></span>
+## <a name="security"></a><span data-ttu-id="2cd33-107">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="2cd33-107">Security</span></span>
 
 [!include[CspParameters.ParentWindowHandle now expects HWND value](~/includes/migration-guide/retargeting/security/cspparametersparentwindowhandle-now-expects-hwnd-value.md)]
 
@@ -58,7 +61,9 @@ ms.lasthandoff: 12/22/2017
 
 [!include[SignedXml.GetPublicKey returns RSACng on net462 (or lightup) without retargeting change](~/includes/migration-guide/retargeting/security/signedxmlgetpublickey-returns-rsacng-on-net462-or-lightup-without.md)]
 
-## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="e745f-108">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="e745f-108">Windows Communication Foundation (WCF)</span></span>
+[!include[SslStream supports TLS Alerts](~/includes/migration-guide/retargeting/networking/sslstream-supports-tls-alerts.md)]
+
+## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="2cd33-108">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="2cd33-108">Windows Communication Foundation (WCF)</span></span>
 
 [!include[Deadlock may result when using Reentrant services](~/includes/migration-guide/retargeting/wcf/deadlock-may-result-when-using-reentrant-services.md)]
 
@@ -70,11 +75,11 @@ ms.lasthandoff: 12/22/2017
 
 [!include[WCF transport security supports certificates stored using CNG](~/includes/migration-guide/retargeting/wcf/wcf-transport-security-supports-certificates-stored-using-cng.md)]
 
-## <a name="windows-forms"></a><span data-ttu-id="e745f-109">Windows フォーム</span><span class="sxs-lookup"><span data-stu-id="e745f-109">Windows Forms</span></span>
+## <a name="windows-forms"></a><span data-ttu-id="2cd33-109">Windows フォーム</span><span class="sxs-lookup"><span data-stu-id="2cd33-109">Windows Forms</span></span>
 
 [!include[Incorrect implementation of MemberDescriptor.Equals](~/includes/migration-guide/retargeting/winforms/incorrect-implementation-memberdescriptorequals.md)]
 
-## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="e745f-110">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="e745f-110">Windows Presentation Foundation (WPF)</span></span>
+## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="2cd33-110">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="2cd33-110">Windows Presentation Foundation (WPF)</span></span>
 
 [!include[Calls to System.Windows.Input.PenContext.Disable on touch-enabled systems may throw an ArgumentException](~/includes/migration-guide/retargeting/wpf/calls-systemwindowsinputpencontextdisable-on-touch-enabled-systems-may-throw.md)]
 
@@ -86,7 +91,7 @@ ms.lasthandoff: 12/22/2017
 
 [!include[WPF Pointer-Based Touch Stack](~/includes/migration-guide/retargeting/wpf/wpf-pointer-based-touch-stack.md)]
 
-## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="e745f-111">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="e745f-111">Windows Workflow Foundation (WF)</span></span>
+## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="2cd33-111">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="2cd33-111">Windows Workflow Foundation (WF)</span></span>
 
 [!include[Workflow checksums changed from MD5 to SHA1](~/includes/migration-guide/retargeting/wf/workflow-checksums-changed-from-md5-sha1.md)]
 
