--- a/docs/framework/migration-guide/retargeting/4.7-4.7.1.md
+++ b/docs/framework/migration-guide/retargeting/4.7-4.7.1.md
@@ -1,60 +1,59 @@
 ---
-title: ".NET Framework 4.7 から 4.7.1 への移行に関する変更の再ターゲット | Microsoft Docs"
-ms.date: 10/09/2017
+title: ".NET Framework 4.7 から 4.7.1 への移行に関する変更の再ターゲット"
+ms.date: 02/26/2018
 ms.prod: .net-framework
 ms.technology:
 - dotnet-clr
 - app-compat
 ms.topic: article
-caps.latest.revision: "1"
+caps.latest.revision: 
 ms.assetid: c04c68f4-9e47-48cc-9b45-b2d4798f3b1c
-author: conniey
+author: chlowell
 ms.author: ronpet
 manager: wpickett
-ms.workload: dotnet
-ms.openlocfilehash: 83b11729b8e058c668061f5946870d63a0b19c2c
-ms.sourcegitcommit: 16186c34a957fdd52e5db7294f291f7530ac9d24
+ms.workload:
+- dotnet
+ms.openlocfilehash: be1f48392d4efc8927e59eefff602d2abf598d82
+ms.sourcegitcommit: 655fd4f78741967f80c409cef98347fdcf77857d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/22/2017
+ms.lasthandoff: 02/28/2018
 ---
-# <a name="retargeting-changes-for-migration-from-net-framework-47-to-471"></a><span data-ttu-id="7cfe5-102">.NET Framework 4.7 から 4.7.1 への移行に関する変更の再ターゲット</span><span class="sxs-lookup"><span data-stu-id="7cfe5-102">Retargeting Changes for Migration from .NET Framework 4.7 to 4.7.1</span></span>
+# <a name="retargeting-changes-for-migration-from-net-framework-47-to-471"></a><span data-ttu-id="8b0e0-102">.NET Framework 4.7 から 4.7.1 への移行に関する変更の再ターゲット</span><span class="sxs-lookup"><span data-stu-id="8b0e0-102">Retargeting Changes for Migration from .NET Framework 4.7 to 4.7.1</span></span>
 
 [!include[versionselector](../../../../includes/migration-guide/retargeting/versionselector.md)]
 
 [!include[introduction](../../../../includes/migration-guide/retargeting/introduction.md)]
 
-<span data-ttu-id="7cfe5-103">.NET Framework 4.7 から 4.7.1 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="7cfe5-103">If you are migrating from the .NET Framework 4.7 to 4.7.1, review the following topics for application compatibility issues that may affect your app:</span></span>
+<span data-ttu-id="8b0e0-103">.NET Framework 4.7 から 4.7.1 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="8b0e0-103">If you are migrating from the .NET Framework 4.7 to 4.7.1, review the following topics for application compatibility issues that may affect your app:</span></span>
 
-## <a name="aspnet"></a><span data-ttu-id="7cfe5-104">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="7cfe5-104">ASP.NET</span></span>
+## <a name="aspnet"></a><span data-ttu-id="8b0e0-104">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="8b0e0-104">ASP.NET</span></span>
 
 [!include[ASP.NET Accessibility Improvements in .NET 4.7.1](~/includes/migration-guide/retargeting/asp/aspnet-accessibility-improvements-net-471.md)]
 
-## <a name="core"></a><span data-ttu-id="7cfe5-105">コア</span><span class="sxs-lookup"><span data-stu-id="7cfe5-105">Core</span></span>
+## <a name="core"></a><span data-ttu-id="8b0e0-105">コア</span><span class="sxs-lookup"><span data-stu-id="8b0e0-105">Core</span></span>
 
 [!include[SerialPort background thread exceptions](~/includes/migration-guide/retargeting/core/serialport-background-thread-exceptions.md)]
 
 [!include[ServiceBase doesn't propagate OnStart exceptions](~/includes/migration-guide/retargeting/core/servicebase-doesnt-propagate-onstart-exceptions.md)]
 
-## <a name="security"></a><span data-ttu-id="7cfe5-106">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="7cfe5-106">Security</span></span>
+## <a name="security"></a><span data-ttu-id="8b0e0-106">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="8b0e0-106">Security</span></span>
 
 [!include[Default SignedXML and SignedXMS algorithms changed to SHA256](~/includes/migration-guide/retargeting/security/default-signedxml-signedxms-algorithms-changed-sha256.md)]
 
 [!include[SignedXml.GetPublicKey returns RSACng on net462 (or lightup) without retargeting change](~/includes/migration-guide/retargeting/security/signedxmlgetpublickey-returns-rsacng-on-net462-or-lightup-without.md)]
 
-## <a name="wpf"></a><span data-ttu-id="7cfe5-107">WPF</span><span class="sxs-lookup"><span data-stu-id="7cfe5-107">WPF</span></span>
-
-[!include[Accessibility improvements in WPF](~/includes/migration-guide/retargeting/wpf/accessibility-improvements-wpf.md)]
-
-## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="7cfe5-108">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="7cfe5-108">Windows Communication Foundation (WCF)</span></span>
+## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="8b0e0-107">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="8b0e0-107">Windows Communication Foundation (WCF)</span></span>
 
 [!include[Improved accessibility for some .NET SDK tools](~/includes/migration-guide/retargeting/wcf/improved-accessibility-for-some-net-sdk-tools.md)]
 
-## <a name="windows-forms"></a><span data-ttu-id="7cfe5-109">Windows フォーム</span><span class="sxs-lookup"><span data-stu-id="7cfe5-109">Windows Forms</span></span>
+## <a name="windows-forms"></a><span data-ttu-id="8b0e0-108">Windows フォーム</span><span class="sxs-lookup"><span data-stu-id="8b0e0-108">Windows Forms</span></span>
 
 [!include[Accessibility improvements in Windows Forms controls](~/includes/migration-guide/retargeting/winforms/accessibility-improvements-windows-forms-controls.md)]
 
-## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="7cfe5-110">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="7cfe5-110">Windows Presentation Foundation (WPF)</span></span>
+## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="8b0e0-109">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="8b0e0-109">Windows Presentation Foundation (WPF)</span></span>
+
+[!include[Accessibility improvements in WPF](~/includes/migration-guide/retargeting/wpf/accessibility-improvements-wpf.md)]
 
 [!include[Selector SelectionChanged event and SelectedValue property](~/includes/migration-guide/retargeting/wpf/selector-selectionchanged-event-selectedvalue-property.md)]
 
@@ -62,7 +61,7 @@ ms.lasthandoff: 12/22/2017
 
 [!include[The default hash algorithm for WPF PackageDigitalSignatureManager is now SHA256](~/includes/migration-guide/retargeting/wpf/default-hash-algorithm-for-wpf-packagedigitalsignaturemanager-now-sha256.md)]
 
-## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="7cfe5-111">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="7cfe5-111">Windows Workflow Foundation (WF)</span></span>
+## <a name="windows-workflow-foundation-wf"></a><span data-ttu-id="8b0e0-110">Windows Workflow Foundation (WF)</span><span class="sxs-lookup"><span data-stu-id="8b0e0-110">Windows Workflow Foundation (WF)</span></span>
 
 [!include[Accessibility improvements in Windows Workflow Foundation (WF) workflow designer](~/includes/migration-guide/retargeting/wf/accessibility-improvements-windows-workflow-foundation-wf-designer.md)]
 
