--- a/docs/framework/migration-guide/runtime/4.5.2-4.6.2.md
+++ b/docs/framework/migration-guide/runtime/4.5.2-4.6.2.md
@@ -1,36 +1,37 @@
 ---
 title: ".NET Framework 4.5.2 から 4.6.2 への移行に関するランタイム変更"
-ms.date: 06/16/2017
+ms.date: 02/26/2018
 ms.prod: .net-framework
 ms.technology:
 - dotnet-clr
 - app-compat
 ms.topic: article
-caps.latest.revision: "1"
+caps.latest.revision: 
 ms.assetid: aba358fe-b62f-45d4-8dea-8ce6b673452e
-author: conniey
+author: chlowell
 ms.author: ronpet
 manager: wpickett
-ms.workload: dotnet
-ms.openlocfilehash: cb40dff82375dd29f8628b3ba2db7f77865cceee
-ms.sourcegitcommit: 16186c34a957fdd52e5db7294f291f7530ac9d24
+ms.workload:
+- dotnet
+ms.openlocfilehash: eae146de1380502f211658ec4c7b5185d57a857e
+ms.sourcegitcommit: 655fd4f78741967f80c409cef98347fdcf77857d
 ms.translationtype: HT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/22/2017
+ms.lasthandoff: 02/28/2018
 ---
-# <a name="runtime-changes-for-migration-from-net-framework-452-to-462"></a><span data-ttu-id="9a191-102">.NET Framework 4.5.2 から 4.6.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="9a191-102">Runtime Changes for Migration from .NET Framework 4.5.2 to 4.6.2</span></span>
+# <a name="runtime-changes-for-migration-from-net-framework-452-to-462"></a><span data-ttu-id="37954-102">.NET Framework 4.5.2 から 4.6.2 への移行に関するランタイム変更</span><span class="sxs-lookup"><span data-stu-id="37954-102">Runtime Changes for Migration from .NET Framework 4.5.2 to 4.6.2</span></span>
 
 [!include[versionselector](../../../../includes/migration-guide/runtime/versionselector.md)]
 
 [!include[introduction](../../../../includes/migration-guide/runtime/introduction.md)]
 
-<span data-ttu-id="9a191-103">.NET Framework 4.5.2 から 4.6.2 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="9a191-103">If you are migrating from the .NET Framework 4.5.2 to 4.6.2, review the following topics for application compatibility issues that may affect your app:</span></span>
+<span data-ttu-id="37954-103">.NET Framework 4.5.2 から 4.6.2 に移行する場合は、アプリに影響する可能性があるアプリケーションの互換性の問題に関する次のトピックを確認してください。</span><span class="sxs-lookup"><span data-stu-id="37954-103">If you are migrating from the .NET Framework 4.5.2 to 4.6.2, review the following topics for application compatibility issues that may affect your app:</span></span>
 
-## <a name="aspnet"></a><span data-ttu-id="9a191-104">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="9a191-104">ASP.NET</span></span>
+## <a name="aspnet"></a><span data-ttu-id="37954-104">ASP.NET</span><span class="sxs-lookup"><span data-stu-id="37954-104">ASP.NET</span></span>
 
 [!include[GridViews with AllowCustomPaging set to true may fire the PageIndexChanging event when leaving the final page of the view](~/includes/migration-guide/runtime/asp/gridviews-with-allowcustompaging-set-true-may-fire-pageindexchanging-event.md)]
 
-## <a name="core"></a><span data-ttu-id="9a191-105">コア</span><span class="sxs-lookup"><span data-stu-id="9a191-105">Core</span></span>
+## <a name="core"></a><span data-ttu-id="37954-105">コア</span><span class="sxs-lookup"><span data-stu-id="37954-105">Core</span></span>
 
 [!include[A ConcurrentDictionary serialized in .NET 4.5 with NetDataContractSerializer cannot be deserialized by .NET 4.5.1 or 4.5.2](~/includes/migration-guide/runtime/core/concurrentdictionary-serialized-net-45-with-netdatacontractserializer-cannot.md)]
 
@@ -50,23 +51,23 @@ ms.lasthandoff: 12/22/2017
 
 [!include[X509Certificate2.ToString(bool) does not throw now when .NET cannot handle the certificate](~/includes/migration-guide/runtime/core/x509certificate2tostringbool-does-not-throw-now-when-net-cannot-handle.md)]
 
-## <a name="data"></a><span data-ttu-id="9a191-106">データ</span><span class="sxs-lookup"><span data-stu-id="9a191-106">Data</span></span>
+## <a name="data"></a><span data-ttu-id="37954-106">データ</span><span class="sxs-lookup"><span data-stu-id="37954-106">Data</span></span>
 
 [!include[Connection pool blocking period for Azure SQL databases is removed](~/includes/migration-guide/runtime/data/connection-pool-blocking-period-for-azure-sql-databases-removed.md)]
 
-## <a name="debugger"></a><span data-ttu-id="9a191-107">デバッガー</span><span class="sxs-lookup"><span data-stu-id="9a191-107">Debugger</span></span>
+## <a name="debugger"></a><span data-ttu-id="37954-107">デバッガー</span><span class="sxs-lookup"><span data-stu-id="37954-107">Debugger</span></span>
 
 [!include[Null coalescer values are not visible in debugger until one step later](~/includes/migration-guide/runtime/debugger/null-coalescer-values-are-not-visible-debugger-until-one-step-later.md)]
 
-## <a name="globalization"></a><span data-ttu-id="9a191-108">グローバリゼーション</span><span class="sxs-lookup"><span data-stu-id="9a191-108">Globalization</span></span>
+## <a name="globalization"></a><span data-ttu-id="37954-108">グローバリゼーション</span><span class="sxs-lookup"><span data-stu-id="37954-108">Globalization</span></span>
 
 [!include[Unicode standard version 8.0 categories now supported](~/includes/migration-guide/runtime/globalization/unicode-standard-version-80-categories-now-supported.md)]
 
-## <a name="networking"></a><span data-ttu-id="9a191-109">ネットワーキング</span><span class="sxs-lookup"><span data-stu-id="9a191-109">Networking</span></span>
+## <a name="networking"></a><span data-ttu-id="37954-109">ネットワーキング</span><span class="sxs-lookup"><span data-stu-id="37954-109">Networking</span></span>
 
 [!include[ContentDisposition DateTimes returns slightly different string](~/includes/migration-guide/runtime/networking/contentdisposition-datetimes-returns-slightly-different-string.md)]
 
-## <a name="security"></a><span data-ttu-id="9a191-110">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="9a191-110">Security</span></span>
+## <a name="security"></a><span data-ttu-id="37954-110">セキュリティ</span><span class="sxs-lookup"><span data-stu-id="37954-110">Security</span></span>
 
 [!include[RSACng and DSACng are once again usable in Partial Trust scenarios](~/includes/migration-guide/runtime/security/rsacng-dsacng-are-once-again-usable-partial-trust-scenarios.md)]
 
@@ -74,31 +75,27 @@ ms.lasthandoff: 12/22/2017
 
 [!include[SignedXml and EncryptedXml Breaking Changes](~/includes/migration-guide/runtime/security/signedxml-encryptedxml-breaking-changes.md)]
 
-## <a name="serialization"></a><span data-ttu-id="9a191-111">シリアル化</span><span class="sxs-lookup"><span data-stu-id="9a191-111">Serialization</span></span>
+## <a name="serialization"></a><span data-ttu-id="37954-111">シリアル化</span><span class="sxs-lookup"><span data-stu-id="37954-111">Serialization</span></span>
 
 [!include[Exception message has changed for failed DataContract serialization in case of an unknown type](~/includes/migration-guide/runtime/serialization/exception-message-has-changed-for-failed-datacontract-serialization-case-an.md)]
 
-## <a name="setup-and-deployment"></a><span data-ttu-id="9a191-112">セットアップと配置</span><span class="sxs-lookup"><span data-stu-id="9a191-112">Setup and Deployment</span></span>
+## <a name="setup-and-deployment"></a><span data-ttu-id="37954-112">セットアップと配置</span><span class="sxs-lookup"><span data-stu-id="37954-112">Setup and Deployment</span></span>
 
 [!include[Product versioning changes in the .NET Framework 4.6 and later versions](~/includes/migration-guide/runtime/setup/product-versioning-changes-net-framework-46-later-versions.md)]
 
 [!include[The .NET Framework 4.6 does not use a 4.5.x.x version when registering itself in the registry](~/includes/migration-guide/runtime/setup/net-framework-46-does-not-use-45xx-version-when-registering-itself-registry.md)]
 
-## <a name="tools"></a><span data-ttu-id="9a191-113">ツール</span><span class="sxs-lookup"><span data-stu-id="9a191-113">Tools</span></span>
+## <a name="tools"></a><span data-ttu-id="37954-113">ツール</span><span class="sxs-lookup"><span data-stu-id="37954-113">Tools</span></span>
 
 [!include[Contract.Invariant or Contract.Requires<TException> do not consider String.IsNullOrEmpty to be pure](~/includes/migration-guide/runtime/tools/contractinvariant-contractrequirestexception-do-not-consider.md)]
 
-## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="9a191-114">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="9a191-114">Windows Communication Foundation (WCF)</span></span>
+## <a name="windows-communication-foundation-wcf"></a><span data-ttu-id="37954-114">Windows Communication Foundation (WCF)</span><span class="sxs-lookup"><span data-stu-id="37954-114">Windows Communication Foundation (WCF)</span></span>
 
 [!include[Remove Ssl3 from the WCF TransportDefaults](~/includes/migration-guide/runtime/wcf/remove-ssl3-from-wcf-transportdefaults.md)]
 
-[!include[WCF services that use NETTCP with SSL sercurity and MD5 certificate authentication](~/includes/migration-guide/runtime/wcf/wcf-services-that-use-nettcp-with-ssl-sercurity-md5-certificate.md)]
+[!include[WCF services that use NETTCP with SSL security and MD5 certificate authentication](~/includes/migration-guide/runtime/wcf/wcf-services-that-use-nettcp-with-ssl-security-md5-certificate.md)]
 
-## <a name="windows-forms"></a><span data-ttu-id="9a191-115">Windows フォーム</span><span class="sxs-lookup"><span data-stu-id="9a191-115">Windows Forms</span></span>
-
-[!include[Icon.ToBitmap successfully converts icons with PNG frames into Bitmap objects](~/includes/migration-guide/runtime/winforms/icontobitmap-successfully-converts-icons-with-png-frames-into-bitmap-objects.md)]
-
-## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="9a191-116">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="9a191-116">Windows Presentation Foundation (WPF)</span></span>
+## <a name="windows-presentation-foundation-wpf"></a><span data-ttu-id="37954-115">Windows Presentation Foundation (WPF)</span><span class="sxs-lookup"><span data-stu-id="37954-115">Windows Presentation Foundation (WPF)</span></span>
 
 [!include[Accessing a WPF DataGrid's selected items from a handler of the DataGrid's UnloadingRow event can cause a NullReferenceException](~/includes/migration-guide/runtime/wpf/accessing-wpf-datagrids-selected-items-from-handler-unloadingrow-event-can.md)]
 
