Commit translated content

--- a/docs/csharp/misc/cs1646.md
+++ b/docs/csharp/misc/cs1646.md
@@ -1,5 +1,5 @@
 ---
-title: "コンパイラ エラー CS1646"
+title: コンパイラ エラー CS1646
 ms.date: 07/20/2015
 ms.prod: .net
 ms.technology:
@@ -10,19 +10,19 @@ f1_keywords:
 helpviewer_keywords:
 - CS1646
 ms.assetid: 5e4b0f1e-8de3-42b0-bde6-9f882677a409
-caps.latest.revision: 
+caps.latest.revision: ''
 author: BillWagner
 ms.author: wiwagn
-ms.openlocfilehash: 65dd4def9b540d5462dfff9b3fef956f2fa4470c
-ms.sourcegitcommit: 83dd5ec003e788ccb3e33f3412a7af39ae347646
+ms.openlocfilehash: 03e03ffc31e0d401d960f74628521a298d8bae66
+ms.sourcegitcommit: 935d5267c44f9bce801468ef95f44572f1417e8c
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 03/15/2018
+ms.lasthandoff: 03/28/2018
 ---
 # <a name="compiler-error-cs1646"></a>コンパイラ エラー CS1646
-verbatim 識別子の後にはキーワード、識別子、または文字列が必要です:@  
+キーワード、識別子、または文字列 verbatim 後が必要です。 \@  
   
- verbatim 識別子 '@' の使用法に関して文字列リテラルを確認します。 verbatim 識別子は、文字列、キーワード、または識別子の前にのみ使用できます。 このエラーを解決するには、正しくない場所にある @ 記号を削除するか、目的の文字列、キーワード、または識別子を追加します。  
+ Verbatim 識別子の使用法に関して文字列リテラルを参照してください。 '\@' です。 verbatim 識別子は、文字列、キーワード、または識別子の前にのみ使用できます。 このエラーを解決するには、正しくない場所にある @ 記号を削除するか、目的の文字列、キーワード、または識別子を追加します。  
   
  次の例では CS1646 が生成されます。  
   
